--- a/googleDirectionLibrary/build.gradle
+++ b/googleDirectionLibrary/build.gradle
@@ -48,7 +48,7 @@ dokka {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
     implementation('com.squareup.retrofit2:converter-gson:2.3.0') {
